# proxytap

./: .gitignore  README.md  go.mod
.github/workflows/: formula-audit.yml  menubar.yml  release.yml
cmd/proxyhubd/: main.go
cmd/proxytapd/: main.go
internal/api/: api.go  dashboard_test.go
internal/api/dashboard/: index.html
internal/checker/: checker.go  util.go
internal/fetcher/: fetcher.go
internal/limiter/: bucket.go  bucket_test.go
internal/mitm/: cert.go  engine.go  pin.go  pin_test.go  plain.go  result.go
internal/pool/: pool.go
internal/proxy/: server.go
menubar-app/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
menubar-app/src/: App.svelte  app.css
menubar-app/src-tauri/: Cargo.toml  tauri.conf.json
menubar-app/src-tauri/src/: main.rs
scripts/: install.sh  proxytap.service
