[package]
name = "proxytap-menubar"
version = "0.1.0"
description = "Menubar shell for the proxytap daemon"
authors = ["kyungw00k"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "proxytap_menubar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
